syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.openobserve.cluster";
option java_outer_classname = "commonProto";

package cluster;

message EmptyRequest {}
message EmptyResponse {}

message FileMeta {
    int64 min_ts          = 1; // microseconds
    int64 max_ts          = 2; // microseconds
    int64 records         = 3;
    int64 original_size   = 4;
    int64 compressed_size = 5;
    int64 index_size      = 6;
}

// Job information for a request
message Job {
    string trace_id  = 1;
    string job       = 2;
    int32  stage     = 3;
    int32  partition = 4;
}

message ScanStats {
    int64 files                       = 1;
    int64 records                     = 2;
    int64 original_size               = 3; // unit: MB
    int64 compressed_size             = 4; // unit: MB
    int64 querier_files               = 5;
    int64 querier_memory_cached_files = 6;
    int64 querier_disk_cached_files   = 7;
    int64 idx_scan_size               = 8; // unit: MB
    int64 idx_took                    = 9; // unit: ms
    int64 file_list_took             = 10; // unit: ms
    int64 aggs_cache_ratio           = 11; // unit: %
}

message FileList {
    repeated FileKey items = 1;
}

message FileKey {
    int64          id          = 1;
    string         key         = 2;
    FileMeta       meta        = 3;
    bool           deleted     = 4;
    optional bytes segment_ids = 5;
}

message IdxFileName {
    string         key         = 1;
    optional bytes segment_ids = 2;
}
